--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^1.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {}
 }
