--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andrew",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^1.0.0",
