--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^4.0.0",
     "ejs": "^1.0.0",
     "express": "^4.16.2",
     "method-override": "^2.3.10"
