--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Andrew",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "cookie-session": "^2.0.0-beta.3",
-    "dotenv": "^4.0.0",
-    "ejs": "^2.5.5",
-    "express": "^4.16.2",
-    "method-override": "^2.3.10"
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cookie-session": "^2.1.0",
+    "dotenv": "^17.0.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {}
 }
